--- a/backend/user-gateway/user-gateway.BLL/user-gateway.BLL.csproj
+++ b/backend/user-gateway/user-gateway.BLL/user-gateway.BLL.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\user-gateway.Domain\user-gateway.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Services\IServices\" />
+  </ItemGroup>
+
 </Project>
