--- a/backend/user-gateway/user-gateway/user-gateway.csproj
+++ b/backend/user-gateway/user-gateway/user-gateway.csproj
@@ -12,4 +12,17 @@
     <ProjectReference Include="..\user-gateway.Domain\user-gateway.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="Middleware\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
