commit for add signUp funtionality for room owner

--- a/frontend/user-gateway-UI/angular.json
+++ b/frontend/user-gateway-UI/angular.json
@@ -21,14 +21,18 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-               "src/assets"
+              "src/assets"
             ],
             "styles": [
+              "node_modules/@selectize/selectize/dist/css/selectize.bootstrap5.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/@selectize/selectize/dist/js/selectize.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "src/assets/js/custom.js"
             ]
           },
           "configurations": {
