--- a/frontend/user-gateway-UI/package.json
+++ b/frontend/user-gateway-UI/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^18.2.8",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -18,6 +19,8 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@selectize/selectize": "^0.15.2",
+    "angular-ng-stepper": "^2.0.0",
     "bootstrap": "^5.3.3",
     "ngx-bootstrap": "^18.0.2",
     "rxjs": "~7.8.0",
@@ -29,6 +32,7 @@
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.31",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
