--- a/backend/user-gateway/user-gateway.BLL/user-gateway.BLL.csproj
+++ b/backend/user-gateway/user-gateway.BLL/user-gateway.BLL.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Services\IServices\" />
+    <Folder Include="Application\Services\Account\DTOs\" />
   </ItemGroup>
 
 </Project>
